update: dynamic creation of Help message based on annotations